--- a/notebooks/2-modeling.ipynb
+++ b/notebooks/2-modeling.ipynb
@@ -230,11 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('model.pkl', 'wb') as f:\n",
+    "with open('../model/model.pkl', 'wb') as f:\n",
     "    pickle.dump(model, f)"
    ]
   },
